--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea/
 /projects/slack/slack-api-token.txt
 /projects/chatgpt/secret-key.txt
+/projects/chatgpt/domain/db/data/*
 /projects/slack/raw_data/messages/*
 .DS_Store
 ._.DS_Store
