ai bot works with simple chatgpt.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea/
 /projects/slack/slack-api-token.txt
+/projects/slack/openai-secret-key.txt
 /projects/chatgpt/secret-key.txt
 /projects/chatgpt/domain/db/data/*
 /projects/slack/raw_data/messages/*
