pointing simpleLLm to llama.cpp.  Tested out whisper.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ slack_sdk
 chromadb
 # psycopg2
 llama-cpp-python
-openai==0.27.10
+# openai==0.27.10
+openai==1.26.0
 python-dotenv
 plaid-python
+asyncio
+nest-asyncio
